Merge worker config updates over defaults