@@ -217,12 +217,14 @@ public final class WorkerControlPlaneRuntime {
         Map<String, Object> sanitized = sanitiseConfig(command.data());
         for (WorkerState state : targets) {
             ensureStatusPublisher(state);
-            Map<String, Object> workerConfig = workerConfigFor(state, sanitized);
-            Boolean enabled = resolveEnabled(workerConfig, command.enabled());
+            Map<String, Object> workerUpdate = workerConfigFor(state, sanitized);
+            Map<String, Object> filteredUpdate = withoutNullValues(workerUpdate);
+            Map<String, Object> mergedConfig = mergeWithExisting(state.rawConfig(), filteredUpdate);
+            Boolean enabled = resolveEnabled(mergedConfig, command.enabled());
             try {
-                Object typedConfig = convertConfig(state.definition(), workerConfig);
-                state.updateConfig(typedConfig, workerConfig, enabled);
-                emitConfigReady(signal, state, workerConfig, enabled);
+                Object typedConfig = convertConfig(state.definition(), mergedConfig);
+                state.updateConfig(typedConfig, mergedConfig, enabled);
+                emitConfigReady(signal, state, mergedConfig, enabled);
                 notifyStateListeners(state);
             } catch (Exception ex) {
                 emitConfigError(signal, state, ex);
@@ -364,7 +366,7 @@ public final class WorkerControlPlaneRuntime {
         sanitized.remove("workerBean");
         sanitized.remove("bean");
         sanitized.remove("target");
-        return Map.copyOf(sanitized);
+        return Collections.unmodifiableMap(sanitized);
     }
 
     private Map<String, Object> workerConfigFor(WorkerState state, Map<String, Object> sanitized) {
@@ -384,6 +386,34 @@ public final class WorkerControlPlaneRuntime {
             return copyMap(nested);
         }
         return sanitized;
+    }
+
+    private Map<String, Object> withoutNullValues(Map<String, Object> candidate) {
+        if (candidate.isEmpty()) {
+            return Map.of();
+        }
+        Map<String, Object> filtered = new LinkedHashMap<>();
+        candidate.forEach((key, value) -> {
+            if (value != null) {
+                filtered.put(key, value);
+            }
+        });
+        if (filtered.isEmpty()) {
+            return Map.of();
+        }
+        return Map.copyOf(filtered);
+    }
+
+    private Map<String, Object> mergeWithExisting(Map<String, Object> existing, Map<String, Object> updates) {
+        if (updates.isEmpty()) {
+            return existing == null ? Map.of() : existing;
+        }
+        Map<String, Object> merged = new LinkedHashMap<>();
+        if (existing != null && !existing.isEmpty()) {
+            merged.putAll(existing);
+        }
+        merged.putAll(updates);
+        return Map.copyOf(merged);
     }
 
     private Map<String, Object> copyMap(Map<?, ?> source) {
